Bug 13762 - Performance regression in LDB one-level searches
Summary: Performance regression in LDB one-level searches
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.8.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-25 03:38 UTC by Tim Beale
Modified: 2021-01-19 10:16 UTC (History)
3 users (show)

See Also:


Attachments
Backport of fix for v4.9 (26.33 KB, patch)
2019-02-04 02:34 UTC, Tim Beale
dbagnall: review+
metze: review-
Details
Fix backport for v4.8 (26.33 KB, patch)
2019-02-04 02:39 UTC, Tim Beale
abartlet: review+
metze: review-
Details
Fix backport for v4.10 (35.46 KB, patch)
2019-02-05 03:07 UTC, Tim Beale
dbagnall: review+
metze: review+
Details
Patches for v4-9-test (26.33 KB, patch)
2019-02-13 10:52 UTC, Stefan Metzmacher
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Beale 2019-01-25 03:38:56 UTC
Some types of one-level searches can have worse performance on v4.8 onwards compared to v4.7.
Comment 1 Tim Beale 2019-02-04 02:34:12 UTC
Created attachment 14821 [details]
Backport of fix for v4.9
Comment 2 Tim Beale 2019-02-04 02:39:46 UTC
Created attachment 14822 [details]
Fix backport for v4.8
Comment 3 Andrew Bartlett 2019-02-04 07:56:47 UTC
Karolin, 

Please select for 4.8 and 4.9.

Tim,

Please cherry-pick ldb 1.5.3 for Samba 4.10 and advise if there are any issues when the full CI comes back on the backports (I'm not expecting any trouble). 

Thanks!
Comment 4 Tim Beale 2019-02-05 03:07:35 UTC
Created attachment 14824 [details]
Fix backport for v4.10
Comment 5 Tim Beale 2019-02-05 03:15:36 UTC
CI links:
v4.8 in progress: https://gitlab.com/samba-team/devel/samba/pipelines/45995540
v4.9 passed: https://gitlab.com/samba-team/devel/samba/pipelines/45995548
v4.10: requires bug #13750 to be backport before CI will tell us anything useful.
https://gitlab.com/samba-team/devel/samba/-/jobs/156235664
Comment 6 Tim Beale 2019-02-07 21:19:41 UTC
Hi Karolin, All the patches are reviewed and ready to deliver. I rebased 4.10 and confirmed it passes CI: https://gitlab.com/catalyst-samba/samba/pipelines/46462977

I can't get a clean gitlab CI run on v4.8 currently. But this is a problem with CI on 4.8 rather than my patch. A clean v4.8-stable branch also fails gitlab CI. I suspect the resources available to the shared CI runners has changed somewhat recently, and the failures are due to hitting swap issues.
Comment 7 Andrew Bartlett 2019-02-13 00:44:12 UTC
Just a reminder that these need to be in 4.9.5 when it is released.
Comment 8 Stefan Metzmacher 2019-02-13 10:35:32 UTC
Comment on attachment 14821 [details]
Backport of fix for v4.9

This doesn't apply any more, ldb-1.4.4 already exists in v4-9-test
Comment 9 Stefan Metzmacher 2019-02-13 10:40:35 UTC
Comment on attachment 14824 [details]
Fix backport for v4.10

Pushed to autobuild-v4-10-test
Comment 10 Stefan Metzmacher 2019-02-13 10:42:50 UTC
Comment on attachment 14822 [details]
Fix backport for v4.8

Pushed to autobuild-v4-8-test
Comment 11 Stefan Metzmacher 2019-02-13 10:52:53 UTC
Created attachment 14840 [details]
Patches for v4-9-test

This changes the version to 1.4.5
Comment 12 Stefan Metzmacher 2019-02-13 10:54:27 UTC
Comment on attachment 14840 [details]
Patches for v4-9-test

Pushed to autobuild-v4-9-test
Comment 13 Tim Beale 2019-02-14 00:50:20 UTC
Sorry for the extra hassle with the 4.9 patch Metze. I had never learnt the difference between the v4-9-stable and v4-9-test branches. I've added a explanation to the wiki now (so hopefully others don't make my same mistake).  
https://wiki.samba.org/index.php/Samba_Release_Planning#Release_Branch_Checkin_Procedure
Comment 14 Karolin Seeger 2019-02-22 08:28:46 UTC
Pushed to all branches.
Closing out bug report.

Thanks!